@@ -12,94 +12,45 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * Configuration de sécurité Spring Security
- * ATTENTION: Cette configuration désactive la sécurité pour le développement.
- * En production, vous devrez:
- * 1. Activer l'authentification (JWT, OAuth2, etc.)
- * 2. Configurer les rôles et permissions
- * 3. Activer CSRF pour les formulaires web
- * 4. Configurer HTTPS
- */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    /**
-     * Configuration de l'encodeur de mots de passe
-     * Utilise BCrypt avec force 10 (par défaut)
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Configuration de la chaîne de filtres de sécurité
-     */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // Désactiver CSRF (utile pour les API REST)
                 .csrf(AbstractHttpConfigurer::disable)
-                
-                // Configuration CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                
-                // Autoriser toutes les requêtes (pour le développement)
-                // TODO: En production, configurer les autorisations par rôle
-                .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()
-                );
-
+                .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
         return http.build();
     }
 
-    /**
-     * Configuration CORS pour permettre les requêtes cross-origin
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Origines autorisées (à adapter selon votre frontend)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",  // React
-                "http://localhost:4200",  // Angular
-                "http://localhost:8081"   // Autre port
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "http://localhost:4200",
+                "http://localhost:8081"
         ));
-        
-        // Méthodes HTTP autorisées
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(List.of(
+                "Authorization", "Content-Type", "X-Requested-With",
+                "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"
         ));
-        
-        // Headers autorisés
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
-        
-        // Headers exposés
-        configuration.setExposedHeaders(List.of("Authorization"));
-        
-        // Autoriser les credentials (cookies, authorization headers)
-        configuration.setAllowCredentials(true);
-        
-        // Durée de cache de la configuration CORS (en secondes)
-        configuration.setMaxAge(3600L);
-        
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
